--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
