--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@google-cloud/cloud-sql-connector": "^1.4.0",
     "@prisma/client": "^6.0.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "prisma": "^6.0.1"
   }
