--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
