--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,12 +33,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
