--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": " nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +20,9 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "prisma": "^6.0.1",
+    "project": "file:..",
     "socket.io": "^4.8.1"
   }
 }
