--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,9 +41,11 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
+    "react-select": "^5.9.0",
     "recharts": "^2.15.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
