--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "html-react-parser": "^5.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
